Several fixes on recording and adams page.

--- a/_themes/tm3/css/buttons.css
+++ b/_themes/tm3/css/buttons.css
@@ -25,6 +25,15 @@
 
 .button.sample
 {
+    left: 50%;
+    margin-left: -32px;
+    margin-top: -32px;
+    position: absolute;
+    top: 50%;
+}
+
+.button.sample
+{
     background: rgba(255, 255, 255, 0.25);
     border-radius: 128px;
     border-width: 3px;
