--- a/_themes/tm3/partials/performance.html
+++ b/_themes/tm3/partials/performance.html
@@ -39,7 +39,7 @@
             {{ if performance_url }}
             <tr class="performance_url">
                 <td>
-                    <a class="button block u-url link" href="{{ performance_url }}">Visit site for more information</a>
+                    <a class="button block u-url link" href="{{ performance_url }}">More Information</a>
                 </td>
             </tr>
             {{ /if }}
