--- a/_themes/tm3/partials/recording.html
+++ b/_themes/tm3/partials/recording.html
@@ -37,7 +37,7 @@
                 <tr>
                     <td colspan="2">
                         <div class="pad">
-                            <a class="button block link" href="{{ recording_url }}" title="{{ publisher_title }}">Visit site for more information</a>
+                            <a class="button block link" href="{{ recording_url }}" title="{{ publisher_title }}">More Information</a>
                         </div>
                     </td>
                 </tr>
