--- a/_themes/tm3/css/tables.css
+++ b/_themes/tm3/css/tables.css
@@ -12,6 +12,7 @@ td, th
     padding: 6px 0;
     text-align: left;
     vertical-align: top;
+    width: 50%;
 }
 
 tr:last-child td, tr:last-child th { border-bottom: 0; }
