--- a/_themes/tm3/css/buttons.css
+++ b/_themes/tm3/css/buttons.css
@@ -34,9 +34,10 @@
 
 .button.sample
 {
-    background: rgba(255, 255, 255, 0.25);
+    background: rgba(0, 0, 0, 0.25);
+    border: 2px solid #fff;
     border-radius: 128px;
-    border-width: 3px;
+    box-shadow: 0 0 2px #000;
     color: transparent;
     height: 64px;
     padding: 0;
