--- a/_themes/tm3/templates/adams-concerto.html
+++ b/_themes/tm3/templates/adams-concerto.html
@@ -33,13 +33,9 @@
             <div class="col-1-3">
                 {{ get_content from="biography" }}
                 {{ if pdfs }}
-                    <div class="grid pad text-center">
-                        {{ pdfs }}
-                        <div class="pad-half">
-                            <a class="button block border download" href="{{ download file="{pdf}" as="{pdf}" }}">{{ label }}</a>
-                        </div>
-                        {{ /pdfs }}
-                    </div>
+                    {{ pdfs }}
+                    <a class="button block border download margin-vertical" href="{{ download file="{pdf}" as="{pdf}" }}">{{ label }}</a>
+                    {{ /pdfs }}
                 {{ endif }}
                 {{ /get_content }}
             </div>
