--- a/_themes/tm3/partials/mailing-list-form.html
+++ b/_themes/tm3/partials/mailing-list-form.html
@@ -24,7 +24,7 @@
                 <input class="expand" name="email" placeholder="Email" required type="email" value="{{ value:email }}">
             </div>
             <div class="col-full text-center">
-                <input class="button link" name="message-submit-button" type="submit" value="Send Message">
+                <input class="button" name="message-submit-button" type="submit" value="Send Message">
             </div>
         </div>
     {{ /if }}
