Fixed event layouts and map info window CSS

--- a/_themes/tm3/css/events.css
+++ b/_themes/tm3/css/events.css
@@ -6,6 +6,8 @@
 
 .h-event tr:first-child td { border: 0; }
 
+.h-event .button { display: none; }
+
 @media (min-width: 768px)
 {
     .map #performance-list
