--- a/_themes/tm3/css/performances.css
+++ b/_themes/tm3/css/performances.css
@@ -34,7 +34,7 @@
 .js #year-selector
 {
     background-color: #fff;
-    border-color: rgba(0, 0, 0, 0.25);
+    border: 0;
     border-radius: 0;
     cursor: pointer;
     font-size: 22px;
