--- a/_themes/tm3/partials/recording.html
+++ b/_themes/tm3/partials/recording.html
@@ -36,8 +36,8 @@
                 {{ if recording_url }}
                 <tr>
                     <td colspan="2">
-                        <div class="pad">
-                            <a class="button block link" href="{{ recording_url }}" target="_blank" title="{{ publisher_title }}">More Information</a>
+                        <div class="pad text-center">
+                            <a class="button border" href="{{ recording_url }}" target="_blank" title="{{ publisher_title }}">More Information</a>
                         </div>
                     </td>
                 </tr>
