--- a/_themes/tm3/css/menu.css
+++ b/_themes/tm3/css/menu.css
@@ -1,3 +1,13 @@
+#logo
+{
+    background-color: rgba(0, 0, 0, 0.2);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 3;
+}
+
 #menu-toggle
 {
     cursor: pointer;
