--- a/_themes/tm3/css/recordings.css
+++ b/_themes/tm3/css/recordings.css
@@ -11,11 +11,6 @@
     z-index: 0;
 }
 
-#recordings-list
-{
-    margin: 60px 0;
-}
-
 #recordings-list li
 {
     margin: 0 0 60px 0;
@@ -47,7 +42,7 @@
     top: 0;
 }
 
-#content { padding: 20px 0 0 0; }
+#content { padding: 40px 0; }
 #next-recording-overlay { opacity: 0; }
 #recordings-list { padding: 0; }
 #recordings-list .recording { margin-bottom: 90px; }
@@ -56,5 +51,5 @@
 
 @media (min-width: 768px)
 {
-    #content { padding: 60px 0 0 0; }
+    #content { padding: 60px 0; }
 }
