--- a/_themes/tm3/partials/recording.html
+++ b/_themes/tm3/partials/recording.html
@@ -36,7 +36,7 @@
                 {{ if recording_url }}
                 <tr>
                     <td colspan="2">
-                        <div class="pad text-center">
+                        <div class="pad-vertical text-center">
                             <a class="button border" href="{{ recording_url }}" target="_blank" title="{{ publisher_title }}">More Information</a>
                         </div>
                     </td>
