--- a/_themes/tm3/css/buttons.css
+++ b/_themes/tm3/css/buttons.css
@@ -36,13 +36,17 @@
 
 .button.sample
 {
-    background: rgba(0, 0, 0, 0.25);
-    border: 2px solid #fff;
-    border-radius: 128px;
-    color: transparent;
+    color: transparent !important;
     height: 64px;
     padding: 0;
     width: 64px;
+}
+
+.button.border.sample
+{
+    background: rgba(0, 0, 0, 0.25);
+    border: 2px solid #fff !important;
+    border-radius: 128px;
 }
 
 .button.sample[data-icon]::before
