--- a/_themes/tm3/css/contact.css
+++ b/_themes/tm3/css/contact.css
@@ -2,10 +2,9 @@
 {
     background-position: top center;
     background-size: cover;
+    margin-bottom: 24px;
     position: relative;
 }
-
-.hero:first-child { margin-bottom: 30px; }
 
 .tile
 {
@@ -15,25 +14,7 @@
     right: 0;
 }
 
-@media (min-width: 768px)
+#mailing-list-form-wrapper
 {
-    .col-1-3,
-    .col-2-3 { padding-right: 0; width: 100%; }
-}
-
-@media (min-width: 1024px)
-{
-    .col-1-3,
-    .col-2-3 { padding-right: 30px; }
-
-    .col-1-3 { width: 33%; }
-    .col-2-3 { width: 66%; }
-
-    #mailing-list-form-wrapper
-    {
-        padding-top: 90px;
-        position: fixed;
-        right: 0;
-        width: 35%;
-    }
+    padding-top: 120px;
 }
