--- a/_themes/tm3/templates/premieres.html
+++ b/_themes/tm3/templates/premieres.html
@@ -1,6 +1,6 @@
 {{ theme:partial half_size="true" src="hero" use_context="true" }}
 
-<section id="wrapper" style="background-color: {{ background_color }};">
+<section id="content-wrapper" style="background-color: {{ background_color }};">
     <div id="content">
         <div class="row pad-vertical">
             <table id="timeline">
