--- a/_themes/tm3/css/images.css
+++ b/_themes/tm3/css/images.css
@@ -2,13 +2,13 @@
 {
     background-size: cover;
     background-repeat: no-repeat;
-    bottom: 0;
+    bottom: 76px;
     left: 0;
     pointer-events: none;
     position: fixed;
     top: 0;
     right: 0;
-    z-index: -1;
+    z-index: 1;
 }
 
 .hero
@@ -36,7 +36,7 @@
     position: absolute;
     right: 0;
     top: 0;
-    z-index: 0;
+    z-index: 3;
 }
 
 .fixed.hero::before,
