--- a/_themes/tm3/layouts/default.html
+++ b/_themes/tm3/layouts/default.html
@@ -37,5 +37,7 @@
             {{ if enable_blur }}{{ theme:js src="stackblur.min" tag="true" }}{{ endif }}
             {{ if page_js }}{{ theme:js src="{ page_js }" tag="true" }}{{ endif }}
         </div>
+
+        {{ theme:partial src="footer" }}
     </body>
 </html>
