--- a/_themes/tm3/templates/biography.html
+++ b/_themes/tm3/templates/biography.html
@@ -1,6 +1,6 @@
 {{ theme:partial half_size="true" src="hero" use_context="true" }}
 
-<main id="wrapper" role="main" style="background-color: {{ background_color }};">
+<main id="content-wrapper" role="main" style="background-color: {{ background_color }};">
     <div id="content">
         <div class="pad">
             {{ content|widont }}
