--- a/_themes/tm3/css/buttons.css
+++ b/_themes/tm3/css/buttons.css
@@ -42,6 +42,12 @@
     width: 64px;
 }
 
+.button.sample.small
+{
+    height: 44px;
+    width: 44px;
+}
+
 .button.border.sample
 {
     background: rgba(0, 0, 0, 0.25);
@@ -56,6 +62,17 @@
     line-height: 64px;
     margin: 0 auto;
 }
+
+.button.sample.small[data-icon]::before
+{
+    font-style: 1.25rem;
+    line-height: 44px;
+}
+
+.button.sample.positioned,
+.button.sample.small.positioned { position: absolute; top: 50%; margin-top: -32px; }
+
+.button.sample.small.positioned { margin-top: -22px; }
 
 .button.border { border: 1px solid #DBDBDB; }
 .button.border:hover { background-color: #202020; color: #FFF; }
