--- a/_themes/tm3/css/layout.css
+++ b/_themes/tm3/css/layout.css
@@ -8,20 +8,19 @@
     box-sizing: border-box;
 }
 
-body
-{
-    padding-bottom: 76px;
-}
-
 footer
 {
-    background-color: #111;
-    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.9);
     color: #FFF;
-    left: 0;
-    position: fixed;
-    right: 0;
-    z-index: 0;
+    position: relative;
+    z-index: 1;
+}
+
+footer [data-icon]
+{
+    font-size: 0;
+    margin-left: 12px;
+    width: 44px;
 }
 
 footer [data-icon]::before
@@ -29,12 +28,14 @@ footer [data-icon]::before
     font-size: 2.5rem;
 }
 
+#social-links { text-align: center; }
+
 #content,
 #content-wrapper,
 #site-wrapper
 {
     position: relative;
-    z-index: 2;
+    z-index: 1;
 }
 
 .card
@@ -91,6 +92,8 @@ footer [data-icon]::before
 
 @media (min-width: 768px)
 {
+    #social-links { text-align: right; }
+
     [class*='col-']
     {
         float: left;
