--- a/_themes/tm3/partials/mailing-list-form.html
+++ b/_themes/tm3/partials/mailing-list-form.html
@@ -1,31 +1,34 @@
-{{ raven:form attr="id:mailing-list-form" formset="mailing-list" }}
-    {{ if {raven:has_errors} }}
-        <ul class="form-errors">
-        {{ raven:errors }}
-            {{ missing }}
-              <li><strong>{{ field|ucfirst }}</strong> field is required</li>
-            {{ /missing }}
+<div class="row">
+    <p class="subhead">Get news and updates:</p>
 
-            {{ invalid }}
-              <li><strong>{{ field|ucfirst }}</strong> {{ message }}</li>
-            {{ /invalid }}
-        {{ /raven:errors }}
-        </ul>
-    {{ /if }}
+    {{ raven:form attr="id:mailing-list-form" formset="mailing-list" }}
+        {{ if {raven:has_errors} }}
+            <ul class="form-errors">
+            {{ raven:errors }}
+                {{ missing }}
+                  <li><strong>{{ field|ucfirst }}</strong> field is required</li>
+                {{ /missing }}
 
-    {{ if {raven:success} }}
-        <h3 class="submission-confirmation">{{ thank_you_message }}</h3>
-    {{ else }}
-        <div class="row">
-            <div class="col-full">
-                <input class="expand" name="name" placeholder="Name" required type="text" value="{{ value:name }}">
+                {{ invalid }}
+                  <li><strong>{{ field|ucfirst }}</strong> {{ message }}</li>
+                {{ /invalid }}
+            {{ /raven:errors }}
+            </ul>
+        {{ /if }}
+
+        {{ if {raven:success} }}
+            <div class="text-center">
+                <h3 class="title">{{ thank_you_message }}</h3>
             </div>
-            <div class="col-full">
-                <input class="expand" name="email" placeholder="Email" required type="email" value="{{ value:email }}">
+        {{ else }}
+            <div class="row">
+                <div class="col-3-4">
+                    <input class="expand margin-half-vertical" name="email" placeholder="Email" required type="email" value="{{ value:email }}">
+                </div>
+                <div class="col-1-4">
+                    <input class="button block border light margin-half-vertical" name="message-submit-button" type="submit" value="Sign Up">
+                </div>
             </div>
-            <div class="col-full text-center">
-                <input class="button" name="message-submit-button" type="submit" value="Send Message">
-            </div>
-        </div>
-    {{ /if }}
-{{ /raven:form }}
+        {{ /if }}
+    {{ /raven:form }}
+</div>
