--- a/_themes/tm3/templates/home.html
+++ b/_themes/tm3/templates/home.html
@@ -51,7 +51,7 @@
                     <article class="row pad-half-icon-right" id="{{ slug }}">
                         <h4 class="title">{{ title }}</h4>
                         <h5 class="subhead">{{ composer }}</h5>
-                        <a class="button border light positioned right sample" data-icon="play" href="{{ sample }}">Play</a>
+                        <a class="button border light positioned right sample small" data-icon="play" href="{{ sample }}">Play</a>
                     </article>
                 </li>
                 {{ /entries:listing }}
