--- a/_themes/tm3/partials/mailing-list-form.html
+++ b/_themes/tm3/partials/mailing-list-form.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <p class="subhead">Get news and updates:</p>
+    <p class="subhead">Get news and updates</p>
 
     {{ raven:form attr="id:mailing-list-form" formset="mailing-list" }}
         {{ if {raven:has_errors} }}
