--- a/_themes/tm3/partials/message-form.html
+++ b/_themes/tm3/partials/message-form.html
@@ -20,13 +20,13 @@
     {{ else }}
         <div class="grid">
             <div class="col-full">
-                <input class="expand light" name="name" placeholder="Name" required type="text" value="{{ value:name }}">
+                <input class="expand light margin-half-vertical" name="name" placeholder="Name" required type="text" value="{{ value:name }}">
             </div>
             <div class="col-full">
-                <input class="expand light" name="email" placeholder="Email" required type="email" value="{{ value:email }}">
+                <input class="expand light margin-half-vertical" name="email" placeholder="Email" required type="email" value="{{ value:email }}">
             </div>
             <div class="col-full">
-                <textarea class="expand light" cols="40" name="message" placeholder="Message" required rows="5">{{ value:message }}</textarea>
+                <textarea class="expand light margin-half-vertical" cols="40" name="message" placeholder="Message" required rows="5">{{ value:message }}</textarea>
             </div>
             <div class="col-full">
                 <div class="text-center">
