--- a/_themes/tm3/partials/performances.html
+++ b/_themes/tm3/partials/performances.html
@@ -1,7 +1,7 @@
 <div id="map">
     <div id="map-canvas"></div>
 
-    <ol class="list scrollable" id="performance-list">
+    <ol class="card list scrollable" id="performance-list">
         {{ entries:listing folder="performances" limit="{limit}" show_future="true" show_hidden="true" since="{since}" until="{until}" sort_dir="asc" }}
         <li class="divider-dark">{{ theme:partial src="performance" use_context="true" }}</li>
         {{ /entries:listing }}
