--- a/_themes/tm3/css/layout.css
+++ b/_themes/tm3/css/layout.css
@@ -40,7 +40,8 @@ footer [data-icon]::before
     z-index: 1;
 }
 
-.card
+.card,
+.map #performance-list
 {
     background-color: #fff;
     border: 1px solid rgba(0, 0, 0, 0.2);
