--- a/_themes/tm3/templates/contact.html
+++ b/_themes/tm3/templates/contact.html
@@ -1,4 +1,4 @@
-<main id="content" role="main">
+<main id="content" role="main" style="background-color: {{ background_color }};">
     <div class="row">
         {{ entries:listing folder="contact" show_hidden="true" }}
         <div class="col-1-2">
