--- a/_themes/tm3/templates/home.html
+++ b/_themes/tm3/templates/home.html
@@ -1,6 +1,6 @@
 {{ theme:partial half_size="true" src="hero" }}
 
-<section id="content" style="background-color: {{ background_color }};">
+<main id="content" style="background-color: {{ background_color }};">
     <div class="row pad">
         <h2 class="display-1">Latest Release</h2>
     </div>
@@ -59,4 +59,4 @@
         </div>
     </div>
     {{ /get_content }}
-</section>
+</main>
