--- a/_themes/tm3/templates/premieres.html
+++ b/_themes/tm3/templates/premieres.html
@@ -1,45 +1,35 @@
 {{ theme:partial half_size="true" src="hero" use_context="true" }}
 
-<section id="content-wrapper" style="background-color: {{ background_color }};">
-    <div id="content">
+<div style="background-color: {{ background_color }};">
+    <main id="content">
         <div class="row pad-vertical">
-            <table id="timeline">
-                <tbody>
-                    {{ entries:listing folder="premieres" group_by_date="Y" show_hidden="true" sort_by="date" sort_dir="desc" }}
+            <div id="timeline">
+                {{ entries:listing folder="premieres" group_by_date="Y" show_hidden="true" sort_by="date" sort_dir="desc" }}
 
-                    {{ if grouped_date }}
-                        {{ if !first }}
-                                </ul>
-                            </td>
-                        </tr>
-                        {{ endif }}
-                    <tr>
-                        <th class="pad-horizontal display-1">{{ grouped_date }}</th>
-                    </tr>
-                    <tr>
-                        <td>
-                            <ul class="list">
-                            {{ endif }}
-                                <li class="divider-light pad-icon-right row" {{ theme:partial src="icon-list" use_context="true" }}>
-                                    <h4 class="title">{{ title }}</h4>
-                                    <h5 class="subhead">{{ composer }}</h5>
-                                </li>
-                            {{ if last }}
+                {{ if grouped_date }}
+                    {{ if !first }}
                             </ul>
-                        </td>
-                    </tr>
                     {{ endif }}
-                    {{ /entries:listing }}
-              </tbody>
-            </table>
-
-            <table id="legend">
-                {{ entries:listing folder="premiere-categories" show_hidden="true" }}
-                <tr>
-                    <th class="body-1 divider-light pad-half-icon-left row" data-icon="{{ icon }}">{{ title }}</th>
-                </tr>
+                <h2 class="pad display-1">{{ grouped_date }}</h2>
+                <ul class="list">
+                {{ endif }}
+                    <li class="divider-light pad-icon-right row" {{ theme:partial src="icon-list" use_context="true" }}>
+                        <h4 class="title">{{ title }}</h4>
+                        <h5 class="subhead">{{ composer }}</h5>
+                    </li>
+                {{ if last }}
+                </ul>
+                {{ endif }}
                 {{ /entries:listing }}
-            </table>
+            </div>
+
+            <div class="row pad-vertical">
+                <ul class="list" id="legend">
+                    {{ entries:listing folder="premiere-categories" show_hidden="true" }}
+                    <li class="subhead divider-light pad-half-icon-left row" data-icon="{{ icon }}">{{ title }}</li>
+                    {{ /entries:listing }}
+                </ul>
+            </div>
         </div>
-    </div>
-</section>
+    </main>
+</div>
