--- a/_themes/tm3/templates/premieres.html
+++ b/_themes/tm3/templates/premieres.html
@@ -13,7 +13,7 @@
                 <h2 class="pad display-1">{{ grouped_date }}</h2>
                 <ul class="list">
                 {{ endif }}
-                    <li class="divider-light pad-icon-right row" {{ theme:partial src="icon-list" use_context="true" }}>
+                    <li class="divider-light pad-icon-left row" {{ theme:partial src="icon-list" use_context="true" }}>
                         <h4 class="title">{{ title }}</h4>
                         <h5 class="subhead">{{ composer }}</h5>
                     </li>
