--- a/_themes/tm3/css/images.css
+++ b/_themes/tm3/css/images.css
@@ -21,6 +21,32 @@
     z-index: 0;
 }
 
+.hero-mask::after,
+.hero-mask::before
+{
+    border-bottom: 20px solid #fff;
+    bottom: 0;
+    content: ' ';
+    display: block;
+    height: 0;
+    position: absolute;
+    width: 50%;
+}
+
+.hero-mask:before
+{
+    border-left: 0;
+    border-right: 20px solid transparent;
+    left: 0;
+}
+
+.hero-mask:after
+{
+    border-right: 0;
+    border-left: 20px solid transparent;
+    right: 0;
+}
+
 .hero::before,
 .overlay::before
 {
